--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-<h1>NorthShore Laboratory Consultants</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LabWise Consulting</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <header>
+    <div class="container">
+      <h1>LabWise Consulting</h1>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#pricing">Pricing</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <section id="about">
+    <div class="container">
+      <h2>About Us</h2>
+      <p>
+        At LabWise Consulting, we specialize in helping clinical laboratories meet regulatory requirements, improve operational efficiency, and implement quality management systems. With over 15 years of industry experience, our team brings deep insight into CLIA, CAP, and COLA standards. Whether you're starting a new lab or optimizing an existing one, we’re here to guide you.
+      </p>
+    </div>
+  </section>
+
+  <section id="pricing">
+    <div class="container">
+      <h2>Pricing Structure</h2>
+      <ul>
+        <li><strong>Initial Consultation:</strong> Free (30 minutes)</li>
+        <li><strong>Hourly Rate:</strong> $150/hr</li>
+        <li><strong>Compliance Audit Package:</strong> $1,200 (Includes gap analysis & report)</li>
+        <li><strong>Ongoing Support (Monthly Retainer):</strong> Starting at $1,000/month</li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <form action="mailto:youremail@example.com" method="post" enctype="text/plain">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required/>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required/>
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 LabWise Consulting. All rights reserved.</p>
+    </div>
+  </footer>
+</body>
+</html>
