--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>LabWise Consulting</title>
+  <title>Northshore Laboratory Consulting</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>LabWise Consulting</h1>
+      <h1>Northshore Laboratory Consulting</h1>
       <nav>
         <a href="#about">About</a>
         <a href="#pricing">Pricing</a>
@@ -22,7 +22,7 @@
     <div class="container">
       <h2>About Us</h2>
       <p>
-        At LabWise Consulting, we specialize in helping clinical laboratories meet regulatory requirements, improve operational efficiency, and implement quality management systems. With over 15 years of industry experience, our team brings deep insight into CLIA, CAP, and COLA standards. Whether you're starting a new lab or optimizing an existing one, we’re here to guide you.
+        At Northshore Laboratory Consulting, we specialize in helping clinical laboratories meet regulatory requirements, improve operational efficiency, and implement quality management systems. With over 15 years of industry experience, our team brings deep insight into CLIA, CAP, and COLA standards. Whether you're starting a new lab or optimizing an existing one, we’re here to guide you.
       </p>
     </div>
   </section>
@@ -31,10 +31,10 @@
     <div class="container">
       <h2>Pricing Structure</h2>
       <ul>
-        <li><strong>Initial Consultation:</strong> Free (30 minutes)</li>
-        <li><strong>Hourly Rate:</strong> $150/hr</li>
-        <li><strong>Compliance Audit Package:</strong> $1,200 (Includes gap analysis & report)</li>
-        <li><strong>Ongoing Support (Monthly Retainer):</strong> Starting at $1,000/month</li>
+        <li><strong>CORE package</strong>Monthly log reviews and QA reports</li>
+        <li>Consultation on technical and scientific matters</li>
+        <li>Monthly 30-minute virtual check-in meetings</li>
+        <li>Incident reports on items discovered by Technical Consultant</li>
       </ul>
     </div>
   </section>
