--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <h2>About Us</h2>
       <p>
-        At Northshore Laboratory Consulting, we specialize in helping clinical laboratories meet regulatory requirements, improve operational efficiency, and implement quality management systems. With over 15 years of industry experience, our team brings deep insight into CLIA, CAP, and COLA standards. Whether you're starting a new lab or optimizing an existing one, we’re here to guide you.
+        At Northshore Laboratory Consulting, we specialize in helping clinical laboratories meet regulatory requirements, improve operational efficiency, and implement quality management systems. With over 8 years of industry experience, our team brings deep insight into CLIA, CAP, and COLA standards. Whether you're starting a new lab or optimizing an existing one, we’re here to guide you.
       </p>
     </div>
   </section>
@@ -59,7 +59,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 LabWise Consulting. All rights reserved.</p>
+      <p>&copy; 2025 Northshore Laboratory Consulting. All rights reserved.</p>
     </div>
   </footer>
 </body>
