--- a/index.html
+++ b/index.html
@@ -29,12 +29,49 @@
 
   <section id="pricing">
     <div class="container">
-      <h2>Pricing Structure</h2>
+      <h2>Services</h2>
       <ul>
-        <li><strong>CORE package</strong>Monthly log reviews and QA reports</li>
+        <li><strong>CORE package - $450/Mo</strong></li>
+        <li>Monthly log reviews and QA reports</li>
         <li>Consultation on technical and scientific matters</li>
         <li>Monthly 30-minute virtual check-in meetings</li>
         <li>Incident reports on items discovered by Technical Consultant</li>
+      </ul>
+      <ul>
+        <li><strong>Personnel ADDONS</strong></li>
+        <li>Virtual Training - $35</li>
+        <li>Virtual Competency - $75</li>
+        <li>In-person Competency - $250 + Expenses</li>
+        <li>Employee file Review - $25/employee</li>
+      </ul>
+      <ul>
+        <li><strong>Instrument ADDONS</strong></li>
+        <li>Initial verification - $1200</li>
+        <li>Reference range study - $100</li>
+        <li>Calibration verification - $50</li>
+        <li>Instrument-to-instrument comparison - $50</li>
+      </ul>
+      <ul>
+        <li><strong>Quality Management ADDONS</strong></li>
+        <li>IQCP development - $1200</li>
+        <li>Supply audit management - $10/mo</li>
+        <li>Safety audit management - $10/mo</li>
+        <li>Result reporting audit management - $20/mo</li>
+        <li>Assistance with corrective actions - $75/hr</li>
+      </ul>
+      <ul>
+        <li><strong>Survey Assistance ADDONS</strong></li>
+        <li>Enhanced Self-assessment - $75</li>
+        <li>Virtual mock survey - $250</li>
+        <li>Virtual survey assistance - $225/hr</li>
+        <li>In-person survey assistance with pre-survey walkthrough - $350/hr + expenses</li>
+        <li>Survey citation correction - <i>priced based on survey results</i></li>
+      </ul>
+      <ul>
+        <li><strong>Proficiency Testing ADDONS</strong></li>
+        <li>Management of API enrollment and ordering - $35/mo</li>
+        <li>Consultation on instructions for running/reporting API samples - $35/event</li>
+        <li>Consultation on Evaluation and Corrective Actions - $35/event</li>
       </ul>
     </div>
   </section>
@@ -42,7 +79,7 @@
   <section id="contact">
     <div class="container">
       <h2>Contact Us</h2>
-      <form action="mailto:youremail@example.com" method="post" enctype="text/plain">
+      <form action="mailto:robert.kinkley@gmail.com" method="post" enctype="text/plain">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required/>
 
