--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
   <header>
     <div class="container header">
-      <img src="logo_420x168.png" class="logo">
+      <img src="./imgs/logo-thumbnail.png" class="logo">
       <!-- <h1>Northshore Laboratory Consulting</h1> -->
       <nav>
         <a href="#about">About</a>
         <a href="#pricing">Pricing</a>
+        <a href="#team">Team</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
@@ -25,7 +26,7 @@
     <div class="container">
       <h2>About Us</h2>
       <p>
-        At Northshore Laboratory Consulting, we specialize in helping clinical laboratories meet regulatory requirements, improve operational efficiency, and implement quality management systems. With over 8 years of industry experience, our team brings deep insight into CLIA, CAP, and COLA standards. Whether you're starting a new lab or optimizing an existing one, we’re here to guide you.
+        At Northshore Laboratory Consulting, we specialize in helping clinical laboratories meet regulatory requirements, improve operational efficiency, and implement quality management systems. With over 20 years combined of industry experience, our team brings deep insight into CLIA, CAP, and COLA standards. Whether you're starting a new lab or optimizing an existing one, we’re here to guide you.
       </p>
     </div>
   </section>
@@ -33,38 +34,43 @@
   <section id="pricing">
     <div class="container">
       <h2>Services</h2>
-      <div class="services">
+      <p class="italic">*Prices are for Gameday Men's Health locations. Other labs please contact for pricing.</p>
+      <div class="tiles">
         <div class="price-tile">
+          <h3>CORE Package - $350/mo</h3>
           <ul>
-            <li><strong>CORE package - $450/Mo</strong></li>
             <li>Monthly log reviews and QA reports</li>
             <li>Consultation on technical and scientific matters</li>
             <li>Monthly 30-minute virtual check-in meetings</li>
             <li>Incident reports on items discovered by Technical Consultant</li>
+            <li>Virtual competency for one (1) Testing person annually</li>
+            <li>Annual reference range study</li>
+            <li>Instrument performance verification (2 instruments)</li>
           </ul>
         </div>
         <div class="price-tile">
+          <h3>Personnel</h3>
           <ul>
-            <li><strong>Personnel ADDONS</strong></li>
-            <li>Virtual Training - $35</li>
-            <li>Virtual Competency - $75</li>
+            <li>Virtual Training - $25</li>
+            <li>Virtual Competency - $50</li>
             <li>In-person Competency - $250 + Expenses</li>
             <li>Employee file Review - $25/employee</li>
+            <p class="italic">*Prices are for additional testing personnel. Training and competencies for one testing personnel is included in the CORE package price.</p>
           </ul>
         </div>
         <div class="price-tile">
+          <h3>Instrument Management</h3>
           <ul>
-            <li><strong>Instrument ADDONS</strong></li>
-            <li>Initial verification - $1200</li>
-            <li>Reference range study - $100</li>
-            <li>Calibration verification - $50</li>
-            <li>Instrument-to-instrument comparison - $50</li>
+            <li>Initial instrument setup and verification - $750</li>
+            <li>Reference range study - $75</li>
+            <li>Calibration verification - $25</li>
+            <li>Instrument-to-instrument comparison - $25</li>
           </ul>
         </div>
         <div class="price-tile">
+          <h3>Quality Management</h3>
           <ul>
-            <li><strong>Quality Management ADDONS</strong></li>
-            <li>IQCP development - $1200</li>
+            <li>IQCP development - $900</li>
             <li>Supply audit management - $10/mo</li>
             <li>Safety audit management - $10/mo</li>
             <li>Result reporting audit management - $20/mo</li>
@@ -72,21 +78,47 @@
           </ul>
         </div>
         <div class="price-tile">
+          <h3>Survey Assistance</h3>
           <ul>
-            <li><strong>Survey Assistance ADDONS</strong></li>
             <li>Enhanced Self-assessment - $75</li>
-            <li>Virtual mock survey - $250</li>
-            <li>Virtual survey assistance - $225/hr</li>
-            <li>In-person survey assistance with pre-survey walkthrough - $350/hr + expenses</li>
+            <li>Virtual mock survey - $200</li>
+            <li>Virtual survey assistance - $200/hr</li>
+            <li>In-person survey assistance with pre-survey walkthrough - $300/hr + expenses</li>
             <li>Survey citation correction - <i>priced based on survey results</i></li>
           </ul>
         </div>
         <div class="price-tile">
+          <h3>Proficiency Testing</h3>
           <ul>
-            <li><strong>Proficiency Testing ADDONS</strong></li>
             <li>Management of API enrollment and ordering - $35/mo</li>
-            <li>Consultation on instructions for running/reporting API samples - $35/event</li>
+            <li>Consultation on instructions for running/reporting API samples - $20/event</li>
             <li>Consultation on Evaluation and Corrective Actions - $35/event</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="team">
+    <div class="container">
+      <h2>Meet the Team</h2>
+      <div class="tiles">
+        <div class="team-tile">
+          <img src="./imgs/headshots/brooke-headshot.png" class="headshot" />
+          <h3>Brooke Jansen</h3>
+          <ul>
+            <li>12 years experience</li>
+            <li>Location: Michigan</li>
+            <li><a href="mailto:brooke.jansen12@gmail.com">Brooke.Jansen12@gmail.com</a></li>
+          </ul>
+        </div>
+        <div class="team-tile">
+          <img src="./imgs/headshots/robert-headshot.png" class="headshot" />
+          <h3>Robert Kinkley</h3>
+          <ul>
+            <li>9 years experience</li>
+            <li>Location: Michigan</li>
+            <li><a href="mailto:robert.kinkley@gmail.com">Robert.Kinkley@gmail.com</a></li>
           </ul>
         </div>
       </div>
