--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <a href="#about">About</a>
         <a href="#pricing">Pricing</a>
-        <a href="#team">Team</a>
+        <!-- <a href="#team">Team</a> -->
         <a href="#contact">Contact</a>
       </nav>
     </div>
@@ -26,7 +26,7 @@
     <div class="container">
       <h2>About Us</h2>
       <p>
-        At Northshore Laboratory Consulting, we specialize in helping clinical laboratories meet regulatory requirements, improve operational efficiency, and implement quality management systems. With over 20 years combined of industry experience, our team brings deep insight into CLIA, CAP, and COLA standards. Whether you're starting a new lab or optimizing an existing one, we’re here to guide you.
+        At Northshore Laboratory Consulting, we specialize in helping clinical laboratories meet regulatory requirements, improve operational efficiency, and implement quality management systems. We believe there is value in paying only for what you need, and not what you don't. That is why our pricing structure is designed to offer the minimum required for compliance, with other services available if requested.
       </p>
     </div>
   </section>
@@ -34,7 +34,7 @@
   <section id="pricing">
     <div class="container">
       <h2>Services</h2>
-      <p class="italic">*Prices are for Gameday Men's Health locations. Other labs please contact for pricing.</p>
+      <!-- <p class="italic">*Prices are for Gameday Men's Health locations. Other labs please contact for pricing.</p> -->
       <div class="tiles">
         <div class="price-tile">
           <h3>CORE Package - $350/mo</h3>
@@ -55,8 +55,8 @@
             <li>Virtual Competency - $50</li>
             <li>In-person Competency - $250 + Expenses</li>
             <li>Employee file Review - $25/employee</li>
-            <p class="italic">*Prices are for additional testing personnel. Training and competencies for one testing personnel is included in the CORE package price.</p>
           </ul>
+           <p class="italic">*Prices are for additional testing personnel. Training and competencies for one testing personnel is included in the CORE package price.</p>
         </div>
         <div class="price-tile">
           <h3>Instrument Management</h3>
@@ -66,6 +66,7 @@
             <li>Calibration verification - $25</li>
             <li>Instrument-to-instrument comparison - $25</li>
           </ul>
+          <p class="italic">*Prices are for additional instruments. CORE package price includes performance studies for two analyzers.</p>
         </div>
         <div class="price-tile">
           <h3>Quality Management</h3>
@@ -99,7 +100,7 @@
     </div>
   </section>
 
-  <section id="team">
+  <!-- <section id="team">
     <div class="container">
       <h2>Meet the Team</h2>
       <div class="tiles">
@@ -123,7 +124,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section id="contact">
     <div class="container">
