--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <header>
     <div class="container header">
       <img src="./imgs/logo-thumbnail.png" class="logo">
-      <!-- <h1>Northshore Laboratory Consulting</h1> -->
       <nav>
         <a href="#about">About</a>
         <a href="#pricing">Pricing</a>
@@ -34,7 +33,7 @@
   <section id="pricing">
     <div class="container">
       <h2>Services</h2>
-      <!-- <p class="italic">*Prices are for Gameday Men's Health locations. Other labs please contact for pricing.</p> -->
+      <p class="italic">*Prices are for Gameday Men's Health locations. Other labs please contact for pricing.</p>
       <div class="tiles">
         <div class="price-tile">
           <h3>CORE Package - $350/mo</h3>
@@ -100,7 +99,7 @@
     </div>
   </section>
 
-  <!-- <section id="team">
+  <section id="team">
     <div class="container">
       <h2>Meet the Team</h2>
       <div class="tiles">
@@ -108,7 +107,7 @@
           <img src="./imgs/headshots/brooke-headshot.png" class="headshot" />
           <h3>Brooke Jansen</h3>
           <ul>
-            <li>12 years experience</li>
+            <li>Technical Consultant</li>li
             <li>Location: Michigan</li>
             <li><a href="mailto:brooke.jansen12@gmail.com">Brooke.Jansen12@gmail.com</a></li>
           </ul>
@@ -117,14 +116,14 @@
           <img src="./imgs/headshots/robert-headshot.png" class="headshot" />
           <h3>Robert Kinkley</h3>
           <ul>
-            <li>9 years experience</li>
+            <li>Technical Consultant</li>
             <li>Location: Michigan</li>
             <li><a href="mailto:robert.kinkley@gmail.com">Robert.Kinkley@gmail.com</a></li>
           </ul>
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <section id="contact">
     <div class="container">
