--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav>
         <a href="#about">About</a>
         <a href="#pricing">Pricing</a>
-        <!-- <a href="#team">Team</a> -->
+        <a href="#team">Team</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
