--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <img src="./imgs/headshots/brooke-headshot.png" class="headshot" />
           <h3>Brooke Jansen</h3>
           <ul>
-            <li>Technical Consultant</li>li
+            <li>Technical Consultant</li>
             <li>Location: Michigan</li>
             <li><a href="mailto:brooke.jansen12@gmail.com">Brooke.Jansen12@gmail.com</a></li>
           </ul>
