--- a/index.html
+++ b/index.html
@@ -36,63 +36,59 @@
       <p class="italic">*Prices are for Gameday Men's Health locations. Other labs please contact for pricing.</p>
       <div class="tiles">
         <div class="price-tile">
-          <h3>CORE Package - $350/mo</h3>
+          <h3>Core Consulting - $600/Month</h3>
           <ul>
             <li>Monthly log reviews and QA reports</li>
             <li>Consultation on technical and scientific matters</li>
             <li>Monthly 30-minute virtual check-in meetings</li>
             <li>Incident reports on items discovered by Technical Consultant</li>
-            <li>Virtual competency for one (1) Testing person annually</li>
-            <li>Annual reference range study</li>
-            <li>Instrument performance verification (2 instruments)</li>
           </ul>
         </div>
         <div class="price-tile">
           <h3>Personnel</h3>
           <ul>
-            <li>Virtual Training - $25</li>
-            <li>Virtual Competency - $50</li>
+            <li>Virtual Training - Included</li>
+            <li>Virtual Competencies - Included</li>
+            <li>Employee file Reviews - Included</li>
+            <li>Continuing Education - Included</li>
             <li>In-person Competency - $250 + Expenses</li>
-            <li>Employee file Review - $25/employee</li>
           </ul>
-           <p class="italic">*Prices are for additional testing personnel. Training and competencies for one testing personnel is included in the CORE package price.</p>
         </div>
         <div class="price-tile">
           <h3>Instrument Management</h3>
           <ul>
-            <li>Initial instrument setup and verification - $750</li>
-            <li>Reference range study - $75</li>
-            <li>Calibration verification - $25</li>
-            <li>Instrument-to-instrument comparison - $25</li>
+            <li>Reference range studies - Included</li>
+            <li>Calibration verifications - Included</li>
+            <li>Instrument-to-instrument comparisons - Included</li>
+            <li>Initial instrument setup and verification - $500</li>
           </ul>
-          <p class="italic">*Prices are for additional instruments. CORE package price includes performance studies for two analyzers.</p>
         </div>
         <div class="price-tile">
           <h3>Quality Management</h3>
           <ul>
-            <li>IQCP development - $900</li>
-            <li>Supply audit management - $10/mo</li>
-            <li>Safety audit management - $10/mo</li>
-            <li>Result reporting audit management - $20/mo</li>
+            <li>IQCP development - Included</li>
+            <li>Supply audit management - Included</li>
+            <li>Safety audit management - Included</li>
+            <li>Result reporting audit management - Included</li>
             <li>Assistance with corrective actions - $75/hr</li>
           </ul>
         </div>
         <div class="price-tile">
           <h3>Survey Assistance</h3>
           <ul>
-            <li>Enhanced Self-assessment - $75</li>
-            <li>Virtual mock survey - $200</li>
-            <li>Virtual survey assistance - $200/hr</li>
-            <li>In-person survey assistance with pre-survey walkthrough - $300/hr + expenses</li>
+            <li>Enhanced Self-assessment - Included</li>
+            <li>Virtual mock survey - Included</li>
+            <li>Virtual survey assistance - $150/hr</li>
+            <li>In-person survey assistance with pre-survey walkthrough - $250/hr + expenses</li>
             <li>Survey citation correction - <i>priced based on survey results</i></li>
           </ul>
         </div>
         <div class="price-tile">
           <h3>Proficiency Testing</h3>
-          <ul>
-            <li>Management of API enrollment and ordering - $35/mo</li>
-            <li>Consultation on instructions for running/reporting API samples - $20/event</li>
-            <li>Consultation on Evaluation and Corrective Actions - $35/event</li>
+          <ul></ul>
+            <li>Consultation on instructions for running/reporting API samples - Included</li>
+            <li>Consultation on Evaluation and Corrective Actions - Included</li>
+            <li>Management of API enrollment, ordering, and reporting - $35/mo</li>
           </ul>
         </div>
       </div>
