--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
   </section>
 
-  <section id="team">
+<!--   <section id="team">
     <div class="container">
       <h2>Meet the Team</h2>
       <div class="tiles">
@@ -119,7 +119,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section id="contact">
     <div class="container">
@@ -149,3 +149,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
+
