--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav>
         <a href="#about">About</a>
         <a href="#pricing">Pricing</a>
-        <a href="#team">Team</a>
+<!--         <a href="#team">Team</a> -->
         <a href="#contact">Contact</a>
       </nav>
     </div>
@@ -149,4 +149,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
