--- a/index.html
+++ b/index.html
@@ -3,19 +3,37 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Northshore Laboratory Consulting</title>
+        <meta name="author" content="Northshore Laboratory Consulting" />
+        <title>CLIA & COLA Compliance Consulting for Labs | Northshore Laboratory Consulting</title>
+        <meta name="description" content="Northshore Laboratory Consulting helps moderate complexity labs achieve CLIA and COLA compliance with expert technical consulting and audit preparation.">
+          <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+        <meta property="og:title" content="CLIA & COLA Compliance Consulting for Labs | Northshore Laboratory Consulting">
+        <meta property="og:description" content="Expert consulting for moderate complexity labs. Northshore Laboratory Consulting helps you achieve CLIA and COLA compliance with confidence.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.northshoreconsult.org/">
+        <meta property="og:image" content="https://www.northshoreconsult.org/assets/img/og-image.png">
+          <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="CLIA & COLA Compliance Consulting for Labs | Northshore Laboratory Consulting">
+        <meta name="twitter:description" content="Northshore Laboratory Consulting helps moderate complexity labs achieve CLIA and COLA compliance with expert technical consulting and audit preparation.">
+        <meta name="twitter:image" content="https://www.northshoreconsult.org/assets/img/og-image.png">
+        
+        
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
-        <!-- <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script> -->
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <style>
+            .link {
+                text-decoration: none;
+                color: #0d6efd;
+            }
+        </style>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -49,14 +67,16 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Full service Physician's Office consulting</h3>
+                    <h3 class="section-subheading text-muted"><a href="#" class="link">CLIA</a> and <a href="#" class="link">COLA</a> compliant consulting for moderate complexity labs. </h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shield-halved fa-stack-1x fa-inverse"></i>
-                        </span>
+                        <a href="compliance.html">
+                            <span class="fa-stack fa-4x">
+                                <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fas fa-shield-halved fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
                         <h4 class="my-3">Compliance</h4>
                         <p class="text-muted">Full lab compliance, zero hassle. We handle regulations, inspections, and documentation so your practice stays safe and efficient</p>
                     </div>
@@ -92,7 +112,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
 
-                                <h4 class="subheading">Lab Setup and Verification</h4>
+                                <h4 class="subheading">Lab Setup and Training</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Ready, set, lab! Our team ensures your lab is properly installed, verified, and compliant, so you can focus on patient care.</p></div>
                         </div>
@@ -101,9 +121,9 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">Training and Competencies</h4>
+                                <h4 class="subheading">Quality Management Plan Design and Oversight</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Expert training made simple. We provide the guidance and assessments your team needs to maintain excellence and compliance every day.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Quality you can trust. Our team creates and manages your lab’s quality plan to ensure excellence and regulatory compliance every step of the way.</p></div>
                         </div>
                     </li>
                     <li>
@@ -119,9 +139,9 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4 class="subheading">Quality Management Plan Design and Oversight</h4>
+                                <h4 class="subheading">Improve Laboratory Efficiency</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Quality you can trust. Our team creates and manages your lab’s quality plan to ensure excellence and regulatory compliance every step of the way.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Transform your lab into a high-performance engine of accuracy and speed—driving efficiency that elevates both care and capacity.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -149,7 +169,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/brooke-headshot.png" alt="..." />
-                            <h4>Brooke Jansen</h4>
+                            <h4>Brooke Jansen, MLS (ASCP)cm</h4>
                             <p class="text-muted">Technical Consultant</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/brooke-jansen/" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
@@ -164,7 +184,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/robert-headshot.png" alt="..." />
-                            <h4>Robert Kinkley</h4>
+                            <h4>Robert Kinkley, MLS (ASCP)cm</h4>
                             <p class="text-muted">Technical Consultant</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/robertkinkley/" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
